fixed styling on smaller screens

--- a/mp2/src/App.css
+++ b/mp2/src/App.css
@@ -49,6 +49,7 @@ header {
 
 .left {
   text-align: left;
+  padding-right: 1vw;
 }
 
 .left h1 {
@@ -56,7 +57,9 @@ header {
 }
 
 .left h2 {
+  text-align: left;
   font-size: 21px;
+  padding: 0;
 }
 
 .right {
@@ -126,9 +129,7 @@ select {
   background: #1a3197;
 }
 .loading-spinner {
-  position: absolute;
-  top: 20%;
-  left: 50%;
+  text-align: center;
   color: white;
 }
 
@@ -166,7 +167,7 @@ select {
     display: flex;
     justify-content: center;
     gap: 15px;
-    margin-bottom: 20px;
+    padding-bottom: 5vh;
   }
   
   .filter {
@@ -187,6 +188,13 @@ select {
     background-color: #9c831e;
   }
   
+  .loading-spinner {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    color: white;
+  }
+
   .query-results {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -246,12 +254,9 @@ select {
     height: 36vh;
     text-align: center;
     padding: 0;
+    display: block;
   }
   
-  .logo {
-    text-align: center;
-    margin: 15px auto;
-  }
   
   .nav-links {
     margin-top: 0;
@@ -303,6 +308,21 @@ select {
   label {
     font-size: 1rem;
   }
+
+  .filters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .filter {
+    display: block;
+    margin-bottom: 10px;
+    padding: 15px;
+    text-align: center;
+    width: 20vw;
+  }
+
 
   input[type="text"],
   select {
